App made fully responsive for mobiles, tablets and desktop

--- a/src/app/components/chatbot/chat-body/choice-button/choice-button.component.css
+++ b/src/app/components/chatbot/chat-body/choice-button/choice-button.component.css
@@ -17,3 +17,15 @@ button:hover {
   color: #fff;
   box-shadow: 0px 0px var(--theme-color);
 }
+
+@media screen and (min-width: 1260px) {
+  button {
+    padding: 1%;
+  }
+}
+
+@media screen and (min-width: 1281px) {
+  button {
+    padding: 1%;
+  }
+}
