--- a/src/app/modules/header/header.component.css
+++ b/src/app/modules/header/header.component.css
@@ -76,6 +76,7 @@ img {
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  outline: none;
 }
 .logout .material-icons {
   color: var(--theme-color);
@@ -89,6 +90,7 @@ img {
   font-size: 16px;
   border: none;
   cursor: pointer;
+  outline: none;
 }
 .dropbtn .material-icons {
   color: #fff;
