--- a/src/app/modules/card/card.component.css
+++ b/src/app/modules/card/card.component.css
@@ -202,3 +202,115 @@
   color: #fff;
   box-shadow: 0px 0px var(--theme-color);
 }
+
+@media screen and (min-width: 320px) {
+  .card-container {
+    width: 90%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 411px) {
+  .card-container {
+    width: 90%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .card-container {
+    width: 90%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .card-container {
+    width: 90%;
+    height: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .card-container {
+    width: 90%;
+    height: auto;
+  }
+
+  .image-gallery {
+    width: 100%;
+    height: 360px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .card-container {
+    width: 90%;
+    height: auto;
+  }
+
+  .image-gallery {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .image-gallery::-webkit-scrollbar {
+    display: none;
+  }
+
+  .image-gallery {
+    width: 100%;
+    height: 360px;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .card-container {
+    width: 30%;
+    height: auto;
+    margin: 1% 0%;
+    margin-left: 5%;
+  }
+
+  .image-gallery {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .image-gallery::-webkit-scrollbar {
+    display: none;
+  }
+
+  .image-gallery {
+    width: 100%;
+    height: 180px;
+  }
+
+  .browse-button button {
+    padding: 1%;
+  }
+}
+
+@media screen and (min-width: 1281px) {
+  .card-container {
+    width: 30%;
+    height: auto;
+    margin: 1% 0%;
+    margin-left: 5%;
+  }
+
+  .image-gallery {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .image-gallery::-webkit-scrollbar {
+    display: none;
+  }
+
+  .image-gallery {
+    width: 100%;
+    height: 180px;
+  }
+
+  .browse-button button {
+    padding: 1%;
+  }
+}
