--- a/src/app/modules/carousel/carousel.component.css
+++ b/src/app/modules/carousel/carousel.component.css
@@ -115,3 +115,98 @@
   font-size: 14px;
   margin: 0;
 }
+
+@media screen and (min-width: 320px) {
+  .carousel-container {
+    width: 100%;
+    height: 50%;
+  }
+}
+
+@media screen and (min-width: 411px) {
+  .carousel-container {
+    width: 100%;
+    height: 50%;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .carousel-container {
+    width: 100%;
+    height: 50%;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .carousel-container {
+    width: 100%;
+    height: 50%;
+  }
+  .slide {
+    width: 40%;
+    height: 85%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .carousel-container {
+    width: 100%;
+    height: 50%;
+  }
+  .slide {
+    width: 40%;
+    height: 85%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .carousel-container {
+    width: 100%;
+    height: 50%;
+  }
+
+  .carousel-container {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .carousel-container::-webkit-scrollbar {
+    display: none;
+  }
+
+  .slide {
+    width: 40%;
+    height: 85%;
+  }
+}
+
+@media screen and (min-width: 1260px) {
+  .carousel-container {
+    width: 100%;
+    height: 60%;
+    margin: 1% 0%;
+  }
+  .slide {
+    width: 20%;
+    height: 90%;
+    margin: 1% 1%;
+  }
+  .slide-image-container {
+    height: 65%;
+  }
+}
+
+@media screen and (min-width: 1281px) {
+  .carousel-container {
+    width: 100%;
+    height: 60%;
+    margin: 1% 0%;
+  }
+  .slide {
+    width: 20%;
+    height: 90%;
+    margin: 1% 1%;
+  }
+  .slide-image-container {
+    height: 65%;
+  }
+}
