--- a/src/app/modules/orderingsummarycard/orderingsummarycard.component.html
+++ b/src/app/modules/orderingsummarycard/orderingsummarycard.component.html
@@ -1,84 +1,80 @@
 <div class="container">
-    <div class="ordering-card">
-      <div *ngIf="isErrorDetected" class="points-error">
-        <p *ngFor="let error of data['error']">-{{ error }}</p>
+  <div class="ordering-card">
+    <div *ngIf="isErrorDetected" class="points-error">
+      <p *ngFor="let error of data['error']">-{{ error }}</p>
+    </div>
+    <div [ngClass]="status">
+      <h1>
+        {{ data["status"] }}
+      </h1>
+    </div>
+    <div class="ordering-details">
+      <div class="orderingId">
+        <p style="margin-bottom: 1%;">Order ID : {{ data["orderId"] }}</p>
+        <p>Date : {{ data["date"].split("T")[0] }}</p>
+        <p>Time : {{ data["date"].split("T")[1].split(".")[0] }}</p>
       </div>
-      <div [ngClass]="status">
-        <h1>
-          {{data["status"]}}
-        </h1>
-      </div>
-      <div class="ordering-details">
-        <div class="orderingId">
-          <p style="margin-bottom: 1%;">Order ID : {{data["orderId"]}}</p>
-          <p>Date : {{ data["date"].split("T")[0] }}</p>
-          <p>Time : {{ data["date"].split("T")[1].split(".")[0] }}</p>
+      <hr />
+      <div class="restaurant-details">
+        <p class="sectionHeading">Ordeing From :</p>
+        <div class="restaurantName">
+          <h1>{{ data["restaurantName"] }}</h1>
         </div>
-        <hr />
-        <div class="restaurant-details">
-          <p class="sectionHeading">Ordeing From :</p>
-          <div class="restaurantName">
-            <h1>{{ data["restaurantName"] }}</h1>
-          </div>
-          <!--div class="address">
+        <!--div class="address">
             <p>
               Next to Vaishali Restaurant, FC Road, Deccan, Pune, Maharashtda,
               India
             </p>
           </div-->
-        </div>
-        <hr />
-        <div class="billing-details">
-                <p class="sectionHeading">Order Details :</p>
-
-                <div class="order-info">
-
-                        <table>
-                            <tr *ngFor="let item of data['menuItems']">
-                                    <td class="item-name">
-                                        {{item.name}}
-                                    </td>
-                                    <td>                                        
-                                        {{item.quantity}}
-                                    </td>
-                                    <td>
-                                        x
-                                    </td>
-                                    <td>
-                                            {{item.price}} 
-                                    </td>
-                                    <td>
-                                        :
-                                    </td>
-                                    <td>
-                                        {{item.quantity * item.price}}
-                                    </td>
-                            </tr>
-                            
-                            </table>     
-                  </div>
-
-          <hr />
-          <p style="margin-top: 5%;">
-            Final Amount :
-            <span>{{ data["totalPoints"] }}</span>
-          </p>
-        </div>
-        <hr />
-        <div class="pointsAfterPayment">
-          <p>
-            <b
-              >Point Balance Available :
-              <span>
-                {{
-                  pointBalance
-                }}</span
-              ></b
-            >
-          </p>
-        </div>
       </div>
-      
+      <hr />
+      <div class="billing-details">
+        <p class="sectionHeading">Order Details :</p>
+
+        <div class="order-info">
+          <table>
+            <tr *ngFor="let item of data['menuItems']">
+              <td class="item-name">
+                {{ item.name }}
+              </td>
+              <td class="item-info">
+                {{ item.quantity }}
+              </td>
+              <td class="item-info">
+                x
+              </td>
+              <td>${{ item.price }}</td>
+              <td class="item-info">
+                :
+              </td>
+              <td>${{ item.quantity * item.price }}</td>
+            </tr>
+          </table>
+        </div>
+
+        <hr />
+        <p>
+          Final Amount:
+          <span
+            >${{
+              data["totalPoints"] / _stateService.CurrencyValueInPoints
+            }}</span
+          >
+        </p>
+        <hr />
+        <p style="margin-top: 5%;">
+          Final Amount in Points:
+          <span>{{ data["totalPoints"] }}</span>
+        </p>
+      </div>
+      <hr />
+      <div class="pointsAfterPayment">
+        <p>
+          <b
+            >Point Balance Available : <span> {{ pointBalance }}</span></b
+          >
+        </p>
+      </div>
     </div>
   </div>
-  
+</div>
