--- a/src/app/modules/card/card.component.css
+++ b/src/app/modules/card/card.component.css
@@ -20,6 +20,27 @@
   white-space: nowrap;
   overflow-y: hidden;
   overflow-x: auto;
+
+  -ms-overflow-style: auto;
+  scrollbar-width: 100%;
+}
+
+.image-gallery::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+.image-gallery::-webkit-scrollbar:horizontal {
+  height: 10px;
+}
+
+.image-gallery::-webkit-scrollbar-thumb {
+  background-color: var(--theme-color);
+  border-radius: 10px;
+  border: 2px solid #eee;
+}
+
+.image-gallery::-webkit-scrollbar-track {
+  background-color: #eee;
 }
 
 .image-container {
@@ -250,14 +271,6 @@
   }
 
   .image-gallery {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
-  .image-gallery::-webkit-scrollbar {
-    display: none;
-  }
-
-  .image-gallery {
     width: 100%;
     height: 360px;
   }
@@ -269,14 +282,6 @@
     height: auto;
     margin: 1% 0%;
     margin-left: 5%;
-  }
-
-  .image-gallery {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
-  .image-gallery::-webkit-scrollbar {
-    display: none;
   }
 
   .image-gallery {
@@ -295,14 +300,6 @@
     height: auto;
     margin: 1% 0%;
     margin-left: 5%;
-  }
-
-  .image-gallery {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
-  .image-gallery::-webkit-scrollbar {
-    display: none;
   }
 
   .image-gallery {
