--- a/src/app/modules/carousel/carousel.component.css
+++ b/src/app/modules/carousel/carousel.component.css
@@ -7,7 +7,7 @@
   overflow-x: auto;
 
   -ms-overflow-style: auto;
-  scrollbar-width: 100%;
+  scrollbar-width: thin;
 }
 
 .carousel-container::-webkit-scrollbar {
