--- a/src/app/modules/card/card.component.css
+++ b/src/app/modules/card/card.component.css
@@ -1,22 +1,23 @@
 .card-container {
-  width: 90%;
+  width: 100%;
   height: auto;
-  margin: 3% 5%;
+  margin: 3% 0%;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px, rgba(0, 0, 0, 0.04) 0px 6px 6px;
-  display: flex;
+  display: block;
   background-color: #fff;
 }
 
 .card {
   width: 96%;
-  height: 96%;
+  height: auto;
   margin: 2% 2%;
   border: none;
 }
 
+/*
 .image-gallery {
   width: 100%;
-  height: 180px;
+  height: auto;
   white-space: nowrap;
   overflow-y: hidden;
   overflow-x: auto;
@@ -64,7 +65,7 @@
   width: 100%;
   height: 100%;
   object-fit: fill;
-}
+}*/
 
 .restaurantInfo {
   width: 100%;
@@ -226,35 +227,35 @@
 
 @media screen and (min-width: 320px) {
   .card-container {
-    width: 90%;
+    width: 100%;
     height: auto;
   }
 }
 
 @media screen and (min-width: 411px) {
   .card-container {
-    width: 90%;
+    width: 100%;
     height: auto;
   }
 }
 
 @media screen and (min-width: 481px) {
   .card-container {
-    width: 90%;
+    width: 100%;
     height: auto;
   }
 }
 
 @media screen and (min-width: 600px) {
   .card-container {
-    width: 90%;
+    width: 100%;
     height: auto;
   }
 }
 
 @media screen and (min-width: 768px) {
   .card-container {
-    width: 90%;
+    width: 100%;
     height: auto;
   }
 
@@ -268,6 +269,7 @@
   .card-container {
     width: 90%;
     height: auto;
+    margin: 3% 5%;
   }
 
   .image-gallery {
