--- a/src/app/modules/card/card.component.html
+++ b/src/app/modules/card/card.component.html
@@ -1,6 +1,29 @@
 <div class="card-container">
-  <div class="card">
-    <div class="image-gallery">
+  <mat-carousel
+    class="imgcarousel"
+    timings="10ms ease-in"
+    [autoplay]="false"
+    interval="5000"
+    color="accent"
+    maxWidth="auto"
+    proportion="60"
+    slides="data['images'].length"
+    [loop]="true"
+    [hideArrows]="false"
+    [hideIndicators]="true"
+    [useKeyboard]="true"
+    [useMouseWheel]="false"
+    orientation="ltr"
+  >
+    <mat-carousel-slide
+      #matCarouselSlide
+      *ngFor="let image of data['images']; let i = index"
+      [image]="image"
+      overlayColor="#00000040"
+      [hideOverlay]="false"
+    ></mat-carousel-slide>
+  </mat-carousel>
+  <!--
       <div class="image-container" *ngFor="let image of data['images']">
         <div class="image">
           <img
@@ -11,7 +34,8 @@
           />
         </div>
       </div>
-    </div>
+      -->
+  <div class="card">
     <div class="restaurantInfo">
       <div class="restaurantName">
         <h1>
