--- a/src/app/modules/carousel/carousel.component.css
+++ b/src/app/modules/carousel/carousel.component.css
@@ -1,6 +1,6 @@
 .carousel-container {
   width: 100%;
-  height: 50%;
+  height: auto;
   margin: 5% 0%;
   white-space: nowrap;
   overflow-y: hidden;
@@ -140,28 +140,28 @@
 @media screen and (min-width: 320px) {
   .carousel-container {
     width: 100%;
-    height: 50%;
+    height: auto;
   }
 }
 
 @media screen and (min-width: 411px) {
   .carousel-container {
     width: 100%;
-    height: 50%;
+    height: auto;
   }
 }
 
 @media screen and (min-width: 481px) {
   .carousel-container {
     width: 100%;
-    height: 50%;
+    height: auto;
   }
 }
 
 @media screen and (min-width: 600px) {
   .carousel-container {
     width: 100%;
-    height: 50%;
+    height: auto;
   }
   .slide {
     width: 40%;
@@ -172,7 +172,7 @@
 @media screen and (min-width: 768px) {
   .carousel-container {
     width: 100%;
-    height: 50%;
+    height: auto;
   }
   .slide {
     width: 40%;
@@ -183,7 +183,7 @@
 @media screen and (min-width: 1024px) {
   .carousel-container {
     width: 100%;
-    height: 50%;
+    height: auto;
   }
 
   .slide {
@@ -195,7 +195,7 @@
 @media screen and (min-width: 1260px) {
   .carousel-container {
     width: 100%;
-    height: 60%;
+    height: auto;
     margin: 1% 0%;
   }
   .slide {
@@ -211,7 +211,7 @@
 @media screen and (min-width: 1281px) {
   .carousel-container {
     width: 100%;
-    height: 60%;
+    height: auto;
     margin: 1% 0%;
   }
   .slide {
