Client changed from US Bank to VISA

--- a/src/app/components/launcher/launcher.component.html
+++ b/src/app/components/launcher/launcher.component.html
@@ -22,7 +22,7 @@
         <label>Client</label>
         <select [(ngModel)]="this.launcherData.client" name="client" required>
           <option value="Test">Test</option>
-          <option value="US Bank">US Bank</option>
+          <option value="VISA">VISA</option>
           <option value="American Express">American Express</option>
         </select>
       </div>
