Resolved Button Hover issue

--- a/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.html
+++ b/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.html
@@ -53,10 +53,10 @@
     </div>
     <div *ngIf="!isErrorDetected && !disableAllButtons" class="user-response">
       <button (click)="proceedToPay()" class="proceedToPay">
-        <p>Proceed To Pay</p>
+        Proceed To Pay
       </button>
       <button (click)="cancelBooking()" class="cancel">
-        <p>Cancel Booking</p>
+        Cancel Booking
       </button>
     </div>
   </div>
