--- a/src/app/modules/bookingsummarycard/bookingsummarycard.component.css
+++ b/src/app/modules/bookingsummarycard/bookingsummarycard.component.css
@@ -231,21 +231,14 @@
   border-radius: 5px;
   background-color: #d9534f;
   box-shadow: 1px 2px #8d8d8d;
+  color: #fff;
+  font-size: 16px;
 }
 
 .cancel:hover {
   background-color: #ffffff;
   border: 1px solid #d43f3a;
-}
-
-.cancel p {
-  color: #fff;
-  font-size: 16px;
-  margin: 0%;
-}
-
-.cancel p:hover {
-  color: #000000;
+  color: #d9534f;
 }
 
 @media screen and (min-width: 768px) {
