--- a/src/app/modules/bookingsummarycard/bookingsummarycard.component.html
+++ b/src/app/modules/bookingsummarycard/bookingsummarycard.component.html
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div *ngIf="!isErrorDetected && !disableAllButtons" class="user-response">
-      <button class="cancel" (click)="cancelBooking()"><p>Cancel Booking</p></button>
+      <button class="cancel" (click)="cancelBooking()">Cancel Booking</button>
     </div>
   </div>
 </div>
