--- a/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.css
+++ b/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.css
@@ -167,20 +167,13 @@
   border-radius: 5px;
   background-color: #5cb85c;
   box-shadow: 1px 2px #8d8d8d;
+  color: #fff;
+  font-size: 16px;
 }
 
 .proceedToPay:hover {
   background-color: #ffffff;
   border: 1px solid #4cae4c;
-}
-
-.proceedToPay p {
-  color: #fff;
-  font-size: 16px;
-  margin: 0%;
-}
-
-.proceedToPay p:hover {
   color: #5cb85c;
 }
 
@@ -196,21 +189,14 @@
   border-radius: 5px;
   background-color: #d9534f;
   box-shadow: 1px 2px #8d8d8d;
+  color: #fff;
+  font-size: 16px;
 }
 
 .cancel:hover {
   background-color: #ffffff;
   border: 1px solid #d43f3a;
-}
-
-.cancel p {
-  color: #fff;
-  font-size: 16px;
-  margin: 0%;
-}
-
-.cancel p:hover {
-  color: #000000;
+  color: #d9534f;
 }
 
 @media screen and (min-width: 768px) {
