--- a/src/app/modules/card/card.component.css
+++ b/src/app/modules/card/card.component.css
@@ -189,20 +189,17 @@
   background-color: #ffffff;
   border: 2px solid #000000;
   box-shadow: 1px 2px #8d8d8d;
+  color: #000000;
+  font-size: 18px;
 }
 
 .proceed-button:hover {
   background-color: #000000;
+  color: #fff;
 }
 
 .proceed-button p {
-  color: #000000;
-  font-size: 18px;
   margin: 0%;
-}
-
-.proceed-button p:hover {
-  color: #fff;
 }
 
 .browse-button button {
@@ -219,7 +216,7 @@
   box-shadow: 1px 2px #8d8d8d;
 }
 
-.browse-button:hover button {
+.browse-button button:hover {
   background: var(--theme-color) none repeat scroll 0 0;
   color: #fff;
   box-shadow: 0px 0px var(--theme-color);
