Adding blinking effect for mic icon when listening

--- a/src/app/components/chatbot/chat-input/chat-input.component.css
+++ b/src/app/components/chatbot/chat-input/chat-input.component.css
@@ -51,8 +51,19 @@ input {
   background-color: white;
 }
 .voice-active {
-  color: green;
+  color: var(--mic-icon-color);
+  animation: blinker 0.3s cubic-bezier(0.5, 0, 1, 1) infinite alternate;
 }
+
+@keyframes blinker {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
 .voice-disabled {
   color: white;
   visibility: hidden;
