Fixed minor bugs

--- a/src/app/modules/carousel/carousel.component.css
+++ b/src/app/modules/carousel/carousel.component.css
@@ -204,7 +204,7 @@
     margin: 1% 1%;
   }
   .slide-image-container {
-    height: 65%;
+    height: 160px;
   }
 }
 
@@ -220,6 +220,6 @@
     margin: 1% 1%;
   }
   .slide-image-container {
-    height: 65%;
+    height: 160px;
   }
 }
