Created theme for Capital One client

--- a/src/app/components/launcher/launcher.component.html
+++ b/src/app/components/launcher/launcher.component.html
@@ -23,7 +23,7 @@
         <select [(ngModel)]="this.launcherData.client" name="client" required>
           <option value="Test">Test</option>
           <option value="VISA">VISA</option>
-          <option value="American Express">American Express</option>
+          <option value="Capital One">Capital One</option>
         </select>
       </div>
 
