--- a/src/app/components/chatbot/chat-input/chat-input.component.css
+++ b/src/app/components/chatbot/chat-input/chat-input.component.css
@@ -6,6 +6,7 @@
   position: fixed;
   bottom: 0;
   background-color: var(--theme-color);
+  background-image: var(--gradient-color);
   border: none;
 }
 
