--- a/src/app/modules/header/header.component.css
+++ b/src/app/modules/header/header.component.css
@@ -87,7 +87,7 @@ img {
 
 /* dropdown CSS */
 .dropbtn {
-  background-color: var(--theme-color);
+  background-color: transparent;
   color: white;
   font-size: 16px;
   border: none;
