--- a/src/app/modules/carousel/carousel.component.css
+++ b/src/app/modules/carousel/carousel.component.css
@@ -54,7 +54,7 @@
 .slide-image-container img {
   max-height: 100%;
   width: 100%;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .slide-text-container {
