--- a/src/app/modules/card/card.component.html
+++ b/src/app/modules/card/card.component.html
@@ -60,7 +60,7 @@
         </div>
 
         <div class="pricePerPerson">
-          <p>${{ data["pricePerHead"] }} per person</p>
+          <p>{{ data["pricePerHead"] }} points per person</p>
         </div>
       </div>
 
