--- a/src/app/modules/carousel/carousel.component.html
+++ b/src/app/modules/carousel/carousel.component.html
@@ -18,7 +18,7 @@
           <p>{{ slide["localityVerbose"] }}</p>
         </div>
         <div class="pricePerPerson">
-          <p>${{ slide["pricePerHead"] }} per person</p>
+          <p>{{ slide["pricePerHead"] }} points per person</p>
         </div>
         <div class="rating">
           <p>
