--- a/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.html
+++ b/src/app/modules/bookingcheckoutcard/bookingcheckoutcard.component.html
@@ -30,8 +30,8 @@
         <p>Date : {{ data["date"].split("T")[0] }}</p>
         <p>Time : {{ data["time"] }}</p>
       </div>
-      <hr/>
-      <div  class="billing-details">
+      <hr />
+      <div class="billing-details">
         <p class="sectionHeading">Billing Details :</p>
         <p>
           Available Point Balance : <span>{{ pointBalance }}</span>
@@ -46,7 +46,9 @@
         <p>
           <b
             >Final Amount :
-            <span>{{ data["perPersonPoints"] * data["noOfGuests"] }}</span></b
+            <span
+              >{{ data["perPersonPoints"] * data["noOfGuests"] }} points</span
+            ></b
           >
         </p>
       </div>
