added validations in launcher

--- a/src/app/components/launcher/launcher.component.html
+++ b/src/app/components/launcher/launcher.component.html
@@ -6,7 +6,7 @@
     <div *ngIf="isErrorDetected" class="points-error">
       <p>{{ launcherData.error }}</p>
     </div>
-    <form action="">
+    <form  #launchForm="ngForm" action="" ngNativeValidate >
       <div class="environment">
         <Label>Environment</Label>
         <select
@@ -44,8 +44,9 @@
           type="text"
           name="userFirstName"
           [(ngModel)]="this.launcherData.userFirstName"
-          pattern="[A-Za-z]"
+          pattern="[A-Za-z\s]+"
           required
+          placeholder="Eg: John"
         />
       </div>
 
@@ -55,6 +56,9 @@
           type="text"
           name="userId"
           [(ngModel)]="this.launcherData.userId"
+          required
+          pattern="[a-zA-Z0-9]+"
+          placeholder="Eg: RJ27AS4567"
         />
       </div>
 
@@ -65,13 +69,15 @@
           name="pointBalance"
           [(ngModel)]="this.launcherData.pointBalance"
           required
+          pattern="[0-9]+"
+          placeholder="Eg: 998000"
         />
       </div>
       <div class="app-loader">
         <app-loader></app-loader>
       </div>
 
-      <button type="submit" (click)="redirect()">Launch</button>
+      <button type="submit" (click)="launchForm.valid ? redirect() : null">Launch</button>
     </form>
   </div>
 </div>
