implemented dynamic routing of clients and dynamic loading of clients in launcher

--- a/src/app/components/launcher/launcher.component.html
+++ b/src/app/components/launcher/launcher.component.html
@@ -21,9 +21,7 @@
       <div class="client">
         <label>Client</label>
         <select [(ngModel)]="this.launcherData.client" name="client" required>
-          <option value="Demo">Demo</option>
-          <option value="VISA">VISA</option>
-          <option value="Capital One">Capital One</option>
+          <option *ngFor="let clientName of clientList" [value]="clientName">{{clientName}}</option>
         </select>
       </div>
 
