--- a/src/app/modules/header/header.component.css
+++ b/src/app/modules/header/header.component.css
@@ -133,14 +133,41 @@ img {
 }
 
 .dropdown:hover .dropdown-content {
-  display: flex;
+  display: block;
   top: 100%;
 }
 
 .dropdown:hover .dropbtn {
   color: black;
 }
-
+.user-options{
+  display: flex;
+  margin: auto;
+  justify-content: space-between;
+}
+.dropdown-links{
+  display: block;
+  margin: auto;
+  padding: 5px;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 600;
+  color: var(--theme-color);
+}
+.dropdown-links a{
+  display: block;
+  padding-left: 5px;
+  margin: 2%;
+  text-align: center;
+  font-weight: 600;
+  border-radius: 7px;
+  border: 2px;
+  border-style: solid;
+  border-color: var(--theme-color);
+  cursor: pointer;
+  box-shadow: 1px 2px #8d8d8d;
+  padding: 2%;
+}
 /* dropdown CSS part ends here */
 
 @media screen and (min-width: 320px) {
